# voxel-mapper

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/array_materials/grass_rock_snow_dirt/: prefab.ron
assets/config/: display_config.ron  logger.ron  map_editor_bindings.ron  third_person_camera.ron
assets/maps/: example_map.ron  procgen_dungeon.ron
assets/material_arrays/blend1/: prefab.ron
assets/material_arrays/grass_rock_snow_dirt/: prefab.ron
assets/materials/sewer_brick/: prefab.ron
assets/materials/stepping_stones/: prefab.ron
run/: download_assets.sh  google_drive.py  linux_release.sh  mac_release.sh  windows_profiler.sh  windows_release.sh
src/: assets.rs  base_3d.rs  collision.rs  control.rs  finite_astar.rs  flashlight.rs  geometry.rs  hover_hint.rs  lib.rs  main.rs  material_set.rs  only_state.rs  render_plugin.rs  rendering.rs  search.rs  test_util.rs  triplanar_pass.rs  voxel.rs
src/collision/: floor_translation.rs  voxel_bvt.rs
src/control/: bindings.rs  camera.rs  edit_voxel.rs  hover_3d.rs
src/control/camera/: colliding_controller.rs  data.rs  debug_feet.rs  final_controller.rs  floor_translation.rs  input.rs  smoother.rs  state.rs
src/rendering/: base_3d.rs  material_set.rs  render_plugin.rs  slotted_buffer.rs  splatted_triplanar_pbr_pass.rs  triplanar_pass.rs
src/rendering/shaders/: pos_color_norm.spv  pos_color_norm.vert  splatted_triplanar_pbr.frag  splatted_triplanar_pbr.spv  triplanar_pbr.frag
src/shaders/: pos_color_norm.vert  pos_norm.vert  triplanar_pbr.frag
src/voxel/: asset_loader.rs  bundle.rs  chunk_cache_compressor.rs  chunk_cache_flusher.rs  chunk_processor.rs  double_buffer.rs  editor.rs  loader.rs  map_file.rs  map_generators.rs  meshing.rs  search.rs  setter.rs
src/voxel/meshing/: chunk_reloader.rs  loader.rs  manager.rs
