[package]
name = "voxel-mapper"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 2

[lib]
name = "voxel_mapper"
path = "src/lib.rs"

[dependencies]
# Currently staying at 0.15.0 until the screen_ray bug is fixed (probably until legion, really)
amethyst = { git = "https://github.com/amethyst/amethyst", tag = "v0.15.0" }
bincode = "1.3.1"
indexmap = "1.5"
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4"
ncollide3d = "=0.21.0"
num-traits = "0.2"
ordered-float = "1.1.0"
rayon = "1.3"
rendy = { version = "0.4.1", default-features = false, features = ["base"] }
serde = "1.0.114"
structopt = "0.3.15"
thread_profiler = { version = "0.3.0", optional = true }

ilattice3 = { git = "https://github.com/bonsairobo/ilattice3" }
ilattice3-mesh = { git = "https://github.com/bonsairobo/ilattice3-mesh" }

# ilattice3 = { path = "../ilattice3" }
# ilattice3-mesh = { path = "../ilattice3-mesh" }

[features]
profiler = ["thread_profiler", "thread_profiler/thread_profiler"]
