[package]
name = "voxel-mapper"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 2

[lib]
name = "voxel_mapper"
path = "src/lib.rs"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", tag = "v0.15.3" }
bincode = "1.3"
crossbeam = "0.7"
fnv = "1.0"
itertools = "0.9"
lazy_static = "1.4"
log = "0.4"
ncollide3d = "=0.21.0"
ordered-float = "1.1"
rayon = "1.3"
rendy = { version = "0.4.1", default-features = false, features = ["base"] }
serde = "1.0"
structopt = "0.3"
thread_profiler = { version = "0.3", optional = true }

ilattice3 = { git = "https://github.com/bonsairobo/ilattice3", rev = "9586551f" }
ilattice3-mesh = { git = "https://github.com/bonsairobo/ilattice3-mesh", rev = "15101c65" }
ilattice3-procgen = { git = "https://github.com/bonsairobo/ilattice3-procgen", rev = "547114fd" }

# ilattice3 = { path = "../ilattice3" }
# ilattice3-mesh = { path = "../ilattice3-mesh" }
# ilattice3-procgen = { path = "../ilattice3-procgen" }

[features]
profiler = ["thread_profiler", "thread_profiler/thread_profiler"]
